# ollama-mcp-tutorials

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
ch03/01_simple_ollama_chat/: README.md  main.py  pyproject.toml
ch03/02_openai_chat/: README.md  main.py  pyproject.toml
ch03/03_stream_chat/: README.md  pyproject.toml
ch03/04_output_parser/: README.md  main.py
ch03/05_lcel_chain/: README.md  main.py  pyproject.toml
ch04/01_prompt_template/: README.md  main.py
ch04/02_chat_history/: README.md  main.py  pyproject.toml
ch04/03_prompt_class/: README.md  main.py
ch05/01_embedding/: README.md  main.py  pyproject.toml
ch05/02_vector_store/: README.md  main.py  pyproject.toml
ch05/03_rag_news/: README.md  main.py  pyproject.toml
ch05/04_rag_pdf/: README.md  main.py  pyproject.toml
ch06/01_tracing_project/: README.md  main.py  pyproject.toml
ch06/02_langchain_hub/: README.md  main.py
ch06/03_langsmith_client/: README.md  pyproject.toml
ch07/01_agent_with_single_tool/: README.md  main.py
ch07/01_tracing_project/: main.py
ch07/02_agent_with_multi_tools/: README.md  main.py
ch07/03_langchain_hub/: pyproject.toml
ch08/01_basic_chatbot_graph/: README.md  main.py
ch08/02_add_tools/: README.md  (+1 more)
ch10/: README.md  audio_transcriber.py  main.py  meeting_summarizer.py  pipeline.py  pyproject.toml
ch10/.claude/: settings.local.json
ch10/01_mcp_agent_notion/: main.py  mcp_config.json  pyproject.toml
ch10/02_mcp_agent_geeknews/: ai_news_top10.txt  mcp_config.json  mcp_manager.py  pyproject.toml
ch11/: README.md  main.py
(+12 files in other folders)
